--- a/pages/mother.day/index.html
+++ b/pages/mother.day/index.html
@@ -181,6 +181,11 @@
             left: 50%;
             transform: translateX(-50%);
         }
+        .load-imgs > img {
+            position: absolute;
+            width: 0;
+            height: 0;
+        }
     </style>
 </head>
 <body>
@@ -273,6 +278,12 @@
         <span>快</span>
         <span>乐</span>
     </div>
+</div>
+<div class="load-imgs">
+    <img src="./imgs/mom.png">
+    <img src="./imgs/splice.png">
+    <img src="./imgs/flower.png">
+    <img src="./imgs/footer.png">
 </div>
 <script>
     scaleW=window.innerWidth/320;
