--- a/pages/mother.day/index.html
+++ b/pages/mother.day/index.html
@@ -74,7 +74,7 @@
             background-repeat: no-repeat;
             background-position: center;
         }
-        ._mom { background-image: url(./imgs/mom.png); }
+        ._mom { background-image: url(https://static-global.121learn.com/_paddy-mom.png); }
         span[class*=_splice] {
             width: 160px;
             height: 140px;
@@ -85,7 +85,7 @@
             content: "";
             background-repeat: no-repeat;
             background-size: contain;
-            background-image: url(./imgs/splice.png);
+            background-image: url(https://static-global.121learn.com/_paddy-splice.png);
             position: absolute;
             width: 320px;
             height: 320px;
@@ -96,8 +96,8 @@
         ._splice-02::before { background-position: -160px 0; }
         ._splice-03::before { background-position: 0 -140px; }
         ._splice-04::before { background-position: -160px -140px; }
-        ._flower { background-image: url(./imgs/flower.png); }
-        ._footer { background-image: url(./imgs/footer.png); }
+        ._flower { background-image: url(https://static-global.121learn.com/_paddy-flower.png); }
+        ._footer { background-image: url(https://static-global.121learn.com/_paddy-footer.png); }
         .loading {
             position: fixed;
             width: 100%;
@@ -267,7 +267,7 @@
             <span class="ani resize" style="width:320px;height:64px;left:0px;top:280px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="2.0s">谁言寸草心，报得三春晖！</span>
         </section>
     </div>
-    <img src="./imgs/arrow.png" style="width:20px;height:15px; top:460px; left:150px;" id="arrow" class="resize">
+    <img src="https://static-global.121learn.com/_paddy-arrow.png" style="width:20px;height:15px; top:460px; left:150px;" id="arrow" class="resize">
     <div class="swiper-pagination"></div>
 </div>
 <div class="loading" id="js-loading">
@@ -280,10 +280,10 @@
     </div>
 </div>
 <div class="load-imgs">
-    <img src="./imgs/mom.png">
-    <img src="./imgs/splice.png">
-    <img src="./imgs/flower.png">
-    <img src="./imgs/footer.png">
+    <img src="https://static-global.121learn.com/_paddy-mom.png">
+    <img src="https://static-global.121learn.com/_paddy-splice.png">
+    <img src="https://static-global.121learn.com/_paddy-flower.png">
+    <img src="https://static-global.121learn.com/_paddy-footer.png">
 </div>
 <script>
     scaleW=window.innerWidth/320;
@@ -349,7 +349,7 @@
         setTimeout(function(){
             isDownTime = true;
             handleLoaded();
-        }, 5000);
+        }, 3500);
 
         function handleLoaded(){
             if(isLoaded && isDownTime){
