--- a/pages/mother.day/index.html
+++ b/pages/mother.day/index.html
@@ -218,12 +218,12 @@
             <span class="ani resize" style="width:320px;height:24px;left:0px;top:196px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="1.5s">以前每周固定的时间往家里打电话，</span>
             <span class="ani resize" style="width:320px;height:24px;left:0px;top:220px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="1.8s">现在视频方便了，</span>
             <span class="ani resize" style="width:320px;height:24px;left:0px;top:244px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="2.1s">也总喜欢没事的时候开个视频唠家常，</span>
-            <span class="ani resize" style="width:320px;height:24px;left:0px;top:268px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="2.4s">最近家里又发生什么事了，</span>
-            <span class="ani resize" style="width:320px;height:24px;left:0px;top:292px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="2.7s">最近又有什么有趣的事，</span>
+            <span class="ani resize" style="width:320px;height:24px;left:0px;top:268px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="2.4s">“最近家里又发生什么事了”，</span>
+            <span class="ani resize" style="width:320px;height:24px;left:0px;top:292px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="2.7s">“最近又有什么有趣的事”，</span>
             <span class="ani resize" style="width:320px;height:24px;left:0px;top:316px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="3.0s">出去玩我也会给您分享我的行程，</span>
             <span class="ani resize" style="width:320px;height:24px;left:0px;top:340px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="3.3s">回家以后也总喜欢和您唠家常，</span>
-            <span class="ani resize" style="width:320px;height:24px;left:0px;top:364px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="3.6s">以前我爸是怎样去姥姥家提亲的，</span>
-            <span class="ani resize" style="width:320px;height:24px;left:0px;top:388px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="3.9s">以前和我阿姨、舅舅们的趣事，</span>
+            <span class="ani resize" style="width:320px;height:24px;left:0px;top:364px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="3.6s">“以前我爸是怎样去姥姥家提亲的”，</span>
+            <span class="ani resize" style="width:320px;height:24px;left:0px;top:388px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="3.9s">“以前和我阿姨、舅舅们的趣事”。</span>
             <span class="ani resize" style="width:320px;height:24px;left:0px;top:402px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.3s" swiper-animate-delay="4.2s">。。。。。。</span>
         </section>
         <section class="swiper-slide swiper-slide4">
@@ -255,7 +255,7 @@
             <span class="ani resize" style="width:320px;height:48px;left:0px;top:160px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="1.0s">把健康做成花叶，</span>
             <span class="ani resize" style="width:320px;height:48px;left:0px;top:200px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="1.5s">把开心做成花茎，</span>
             <span class="ani resize" style="width:320px;height:48px;left:0px;top:240px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="2.0s">用代码编织成一朵最漂亮的康乃馨，</span>
-            <span class="ani resize" style="width:320px;height:48px;left:0px;top:280px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="2.5s">只想把的祝福送给您，</span>
+            <span class="ani resize" style="width:320px;height:48px;left:0px;top:280px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="2.5s">只想把最好的祝福送给您，</span>
             <span class="ani resize" style="width:320px;height:48px;left:0px;top:320px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="3.0s">母亲节快乐。</span>
             <span class="ani resize _flower" style="width:320px;height:100px;left:0px;top:360px; " swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="3.5s"></span>
         </section>
