--- a/pages/fairy/3d_photo.html
+++ b/pages/fairy/3d_photo.html
@@ -217,7 +217,7 @@
         }
     </style>
 </head>
-<body class="center">
+<body class="center" ontouchstart>
     <div class="container center">
         <div class="wrap">
             <div class="content">
