--- a/list/css/linear-gradient.html
+++ b/list/css/linear-gradient.html
@@ -907,6 +907,8 @@
         <p><a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/Guide/CSS/Using_CSS_gradients">https://developer.mozilla.org/zh-CN/docs/Web/Guide/CSS/Using_CSS_gradients</a></p>
         <p><a target="_blank" href="https://www.runoob.com/css3/css3-gradients.html">https://www.runoob.com/css3/css3-gradients.html</a></p>
         <p><a target="_blank" href="http://caibaojian.com/css3/values/image/linear-gradient().htm#dfn-syntax">http://caibaojian.com/css3/values/image/linear-gradient().htm#dfn-syntax</a></p>
+        <p><a target="_blank" href="http://standardista.com/cssgradients/">http://standardista.com/cssgradients/</a></p>
+        <p><a target="_blank" href="https://leaverou.github.io/css3patterns/#">https://leaverou.github.io/css3patterns/#</a></p>
     </section>
 </body>
 </html>
